# rust-gistre-workshop

./: .gitignore  README.md
.github/workflows/: build_test_fmt.yml
0_intro/: README.md
0_intro/exercises/broken_ownership/: Cargo.toml
0_intro/exercises/bubble_sort/: Cargo.toml
0_intro/exercises/cat/: Cargo.toml
0_intro/exercises/factorial/: Cargo.toml
0_intro/exercises/fibonacci/: Cargo.toml
0_intro/exercises/hello_world/: Cargo.toml
0_intro/exercises/swap/: Cargo.toml
0_intro/exercises/vec_strlen/: Cargo.toml
0_intro/exercises/vec_sum/: Cargo.toml
0_intro/live_coding/: README.md
0_intro/live_coding/yes/: Cargo.toml
0_intro/live_coding/yes_1/: Cargo.toml
0_intro/live_coding/yes_2/: Cargo.toml
0_intro/live_coding/yes_3/: Cargo.toml
0_intro/live_coding/yes_3/src/: main.rs
0_intro/live_coding/yes_4/: Cargo.toml
1_slices_modules_and_objects/: README.md
1_slices_modules_and_objects/exercises/acronym/: Cargo.toml
1_slices_modules_and_objects/exercises/generic_ordered_vec/: Cargo.toml
1_slices_modules_and_objects/exercises/merge_sort/: Cargo.toml
1_slices_modules_and_objects/live_coding/: README.md
1_slices_modules_and_objects/live_coding/zoo_1/: Cargo.toml
1_slices_modules_and_objects/live_coding/zoo_2/: Cargo.toml
2_generics_collections/: README.md
2_generics_collections/generic_binary_search/: Cargo.toml
2_generics_collections/generic_binary_search/src/: lib.rs
2_generics_collections/live_coding/: README.md
2_generics_collections/live_coding/bank_1/: Cargo.toml
misc/: logo.xcf  slide_dark.xcf  slide_light.xcf
(+46 files in other folders)
